completed chapter 1 on installations and project setup